--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -196,3 +196,23 @@ button {
 		float: right;
 	}
 }
+
+.scale-enter {
+	opacity: 0;
+	transform: scale(0);
+}
+.scale-enter-active {
+	opacity: 1;
+	transform: scale(1);
+	transform-origin: top center;
+	transition: opacity 400ms, transform 400ms ease-out;
+}
+.scale-exit {
+	opacity: 1;
+	transform: scale(1);
+}
+.scale-exit-active {
+	opacity: 0;
+	transform: scale(0);
+	transition: opacity 200ms, transform 200ms ease-in;
+}
