fix: reduce margin between reply/comment and add reply section

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -144,6 +144,12 @@ button {
   cursor: pointer;
 }
 
+.comment-inner-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
 .comment {
   flex-grow: 1;
   padding: 24px;
