--- a/src/css/index.css
+++ b/src/css/index.css
@@ -297,4 +297,34 @@ button {
   }
 }
 
+.delete-confirm-wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.delete-confirm-wrapper .delete-confirm {
+  width: clamp(250px, 90%, 300px);
+  border-radius: 8px;
+  background-color: white;
+  padding: 24px;
+}
+
+.confirmation-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between;
+  gap: 12px;
+}
+
+.fill-available-width {
+  width: -webkit-fill-available;
+}
+
 /*# sourceMappingURL=index.css.map */
