--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -186,3 +186,30 @@ button {
 		display: none !important;
 	}
 }
+
+.delete-confirm-wrapper {
+	width: 100%;
+	height: 100%;
+	background-color: rgba($color: #000000, $alpha: 0.5);
+	position: fixed;
+	top: 0;
+	left: 0;
+	@include flex-center;
+
+	.delete-confirm {
+		width: clamp(250px, 90%, 300px);
+		border-radius: 8px;
+		background-color: map-get($colors, "white");
+		padding: 24px;
+	}
+}
+
+.confirmation-buttons {
+	@include flex-center;
+	justify-content: space-between;
+	gap: 12px;
+}
+
+.fill-available-width {
+	width: -webkit-fill-available;
+}
