--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -8,6 +8,7 @@ $colors: (
 	"l-gray": hsl(223, 19%, 93%),
 	"vl-gray": hsl(228, 33%, 97%),
 	"white": hsl(0, 0%, 100%),
+	"black": hsl(0, 0%, 0%),
 );
 
 @each $color, $value in $colors {
