feat: add animation to confirm deletion dialog

--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -8,3 +8,18 @@
 	transform-origin: top center;
 	transition: opacity 400ms, transform 400ms ease-out;
 }
+
+.fade-enter {
+	opacity: 0;
+}
+.fade-enter-active {
+	opacity: 1;
+	transition: opacity 250ms;
+}
+.fade-exit {
+	opacity: 1;
+}
+.fade-exit-active {
+	opacity: 0;
+	transition: opacity 250ms;
+}
