--- a/src/css/index.css
+++ b/src/css/index.css
@@ -122,6 +122,24 @@
   transition: opacity 400ms, transform 400ms ease-out;
 }
 
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 250ms;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 250ms;
+}
+
 body {
   font-family: Rubik, Helvetica, Arial, sans-serif;
   background-color: #f5f6fa;
