--- a/src/css/index.css
+++ b/src/css/index.css
@@ -150,6 +150,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: opacity 250ms;
   gap: 8px;
 }
 .icon-btn:hover {
@@ -159,6 +160,7 @@ body {
 .btn {
   padding: 16px 24px;
   border-radius: 8px;
+  transition: opacity 250ms;
 }
 .btn:hover {
   opacity: 0.4;
@@ -192,6 +194,12 @@ button {
   border-radius: 8px;
   height: min-content;
   width: min-content;
+}
+.comment .vote-wrapper .vote-box button {
+  transition: color 250ms;
+}
+.comment .vote-wrapper .vote-box button:hover {
+  color: #5457b6;
 }
 .comment .vote-wrapper .vote-box > * {
   display: flex;
